# CV_ProyectoFinal

./: .gitignore  01_Setup_Test.ipynb  02_Embeddings_Whitelist_Caras.ipynb  03_CompletePipeline.ipynb  04_Interfaz_Gestion.ipynb  Entreno_Modelo_HousePartes.ipynb  Procfile  README.md  Reporte_CV_ProyectoFinal.ipynb  main.py  pyproject.toml  requirements.txt
models/: clases.json  full_model.pth
src/: gradio_app.py  sistema.py
