[project]
name = "proyecofinal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastai>=2.8.7",
    "gradio>=6.17.3",
    "insightface>=1.0.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "plyer>=2.1.0",
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "toml>=0.10.2",
    "ultralytics>=8.4.66",
]
